# imm-mode-gui-demo

./: Application.cpp  CMakeLists.txt  Main.cpp  README.md  glad.c
assets/glsl/: GUI.frag  GUI.vert  color.frag  color.vert  immediate.frag  immediate.vert
game/: Game.cpp  Game.h  GameRenderer.cpp  GameRenderer.h
include/glad/: glad.h
projects/noise/: NoiseProject.cpp  NoiseProject.h
projects/snake/: SnakeGame.cpp  SnakeGame.h
projects/template/: TemplateProject.cpp  TemplateProject.h
stb/: stb_truetype.h
